onboarding once with shared pref, btn of login, signup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,8 @@
     <string name="menu_my_reports">My Reports</string>
     <string name="menu_my_acc">My Account</string>
     <string name="text_report_name">Report Name</string>
+    
+    
+    <string name="shared_pref_first_time_user">isfirsttimeuser</string>
 
 </resources>
