--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="text_report_name">Report Name</string>
     
     
-    <string name="shared_pref_first_time_user">isfirsttimeuser</string>
+    <string name="shared_pref_first_time_user">IS_FIRST_TIME_USER</string>
+    <string name="shared_pref_user_name">USER_NAME</string>
+    <string name="shared_pref_user_email">USER_EMAIL</string>
 
 </resources>
