--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <!-- Menu-->
     <string name="menu_dashboard">Dashboard</string>
     <string name="menu_add_reports">Add Reports</string>
     <string name="menu_my_reports">My Reports</string>
