--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,7 @@
     <string name="report_serum_proteins_globulins">Globulins</string>
     <string name="report_serum_proteins_agratio">A/G Ratio</string>
     <string name="text_report_information">Report Information</string>
+    <string name="text_step1">Step 1: Go to Add your report section</string>
+    <string name="text_step2">Step 2: Add report name and report image (must be png/jpg/jpeg) and hit add report button</string>
+    <string name="text_step3">Step 3: See your added report in the view report option</string>
 </resources>
