--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <!-- Description-->
     <string name="text_accept_tnc">By signing in you accept our </string>
     <string name="text_insert_code_here">Insert your code here</string>
-    <string name="desc_dont_have_an_acc">Don't have an account?</string>
+    <string name="desc_dont_have_an_acc">Don\'t have an account?</string>
     <string name="desc_enter_cred">Enter Credentials here!</string>
 
     <!-- Buttons-->
